<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- General settings -->
    <PreferenceCategory android:key="general_category"
        android:title="@string/general_title">

        <PreferenceScreen android:key="propmodder" android:title="@string/showbuild_title" android:summary="@string/showbuild_label">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.n00bware.propmodder"
                android:targetClass="com.n00bware.propmodder.ShowBuildProp" />
        </PreferenceScreen>

        <ListPreference android:key="pref_wifi_scan_interval"
            android:dialogTitle="@string/pref_wifi_scan_interval_title"
            android:title="@string/pref_wifi_scan_interval_title" android:summary="@string/pref_wifi_scan_interval_summary"
            android:entries="@array/entries_wifi_scan"
            android:entryValues="@array/entries_wifi_scan" />

        <ListPreference android:key="pref_lcd_density"
            android:dialogTitle="@string/pref_lcd_density_title"
            android:title="@string/pref_lcd_density_title" android:summary="@string/pref_lcd_density_summary"
            android:entries="@array/entries_lcd_density"
            android:entryValues="@array/entries_lcd_density" />

        <ListPreference android:key="pref_max_events"
            android:dialogTitle="@string/pref_max_events_title"
            android:title="@string/pref_max_events_title" android:summary="@string/pref_max_events_summary"
            android:entries="@array/entries_max_events"
            android:entryValues="@array/entries_max_events" />

<!-- This may be a bad idea
        <ListPreference android:key="pref_usb_mode"
            android:dialogTitle="@string/pref_usb_mode_title"
            android:title="@string/pref_usb_mode_title" android:summary="@string/pref_usb_mode_summary"
            android:entries="@array/entries_usb_mode"
            android:entryValues="@array/entries_usb_mode_values" />
-->

        <ListPreference android:key="pref_ring_delay"
            android:dialogTitle="@string/pref_ring_delay_title"
            android:title="@string/pref_ring_delay_title" android:summary="@string/pref_ring_delay_summary"
            android:entries="@array/entries_ring_delay"
            android:entryValues="@array/entries_ring_delay" />

        <ListPreference android:key="pref_vm_heapsize"
            android:dialogTitle="@string/pref_vm_heapsize_title"
            android:title="@string/pref_vm_heapsize_title" android:summary="@string/pref_vm_heapsize_summary"
            android:entries="@array/entries_vm_heapsize"
            android:entryValues="@array/entries_vm_heapsize" />

        <ListPreference android:key="pref_fast_up"
            android:dialogTitle="@string/pref_fast_up_title"
            android:title="@string/pref_fast_up_title" android:summary="@string/pref_fast_up_summary"
            android:entries="@array/entries_fast_up_explain"
            android:entryValues="@array/entries_fast_up"
            android:enabled="true" />

        <CheckBoxPreference android:key="pref_disable_boot_anim"
            android:title="@string/pref_disable_boot_anim_title"
            android:summary="@string/pref_disable_boot_anim_summary" />

        <ListPreference android:key="pref_prox_delay"
            android:dialogTitle="@string/pref_prox_delay_title"
            android:title="@string/pref_prox_delay_title" android:summary="@string/pref_prox_delay_summary"
            android:entries="@array/entries_prox_delay_explain"
            android:entryValues="@array/entries_prox_delay"
            android:enabled="true" />

    </PreferenceCategory>
    <PreferenceCategory android:key="nonProp_category">

        <CheckBoxPreference android:key="pref_logcat"
            android:title="@string/pref_logcat_title"
            android:summary="@string/pref_logcat_summary" />
    </PreferenceCategory>
</PreferenceScreen>
