<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="@string/main_title_head"
        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

        <ListPreference
            android:key="wifi_scan"
            android:title="@string/pref_wifi_scan_interval_title"
            android:summary="@string/pref_wifi_scan_interval_summary"
            android:persistent="false"
            android:entries="@array/entries_wifi_scan"
            android:entryValues="@array/entries_wifi_scan" />

        <ListPreference
            android:key="lcd_density"
            android:title="@string/pref_lcd_density_title"
            android:summary="@string/pref_lcd_density_summary"
            android:persistent="false"
            android:entries="@array/entries_lcd_density"
            android:entryValues="@array/entires_lcd_density" />

        <ListPreference
            android:key="max_events"
            android:title="@string/pref_max_events_title"
            android:summary="@string/pref_max_events_summary"
            android:persistent="false"
            android:entries="@array/entries_max_events"
            android:entryValues="@array/entires_max_events" />

        <ListPreference
            android:key="usb_mode"
            android:title="@string/pref_usb_mode_title"
            android:summary="@string/pref_usb_mode_summary"
            android:persistent="false"
            android:entries="@array/entries_usb_mode"
            android:entryValues="@array/entires_usb_mode_values" />

        <ListPreference
            android:key="ring_delay"
            android:title="@string/pref_ring_delay_title"
            android:summary="@string/pref_ring_delay_summary"
            android:persistent="false"
            android:entries="@array/entries_ring_delay"
            android:entryValues="@array/entires_ring_delay" />

        <ListPreference
            android:key="vm_heapsize"
            android:title="@string/pref_vm_heapsize_title"
            android:summary="@string/pref_vm_heapsize_summary"
            android:persistent="false"
            android:entries="@array/entries_vm_heapsize"
            android:entryValues="@array/entires_vm_heapsize" />

</PreferenceScreen>
