<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- General settings -->
    <PreferenceCategory android:key="general_category"
        android:title="@string/general_title">

        <ListPreference android:key="pref_jbirdvegas"
            android:dialogTitle="@string/pref_jbirdvegas_title"
            android:title="@string/pref_jbirdvegas_title" android:summary="@string/pref_jbirdvegas_summary"
            android:entries="@array/entries_jbirdvegas_explain"
            android:entryValues="@array/entries_jbirdvegas" />

        <ListPreference android:key="pref_revnumbers"
            android:dialogTitle="@string/pref_revnumbers_title"
            android:title="@string/pref_revnumbers_title" android:summary="@string/pref_revnumbers_summary"
            android:entries="@array/entries_revnumbers_explain"
            android:entryValues="@array/entries_revnumbers" />

    </PreferenceCategory>
</PreferenceScreen>
